bug fixes to stuff not working on mobile like name write and a couple css fixes on index page/navbar

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -28,6 +28,7 @@ ol[role='list'] {
 html {
   height: 100%;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
